# rmqpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: Sanitizers.cmake
include/rmq/: types.h
include/rmq/messages/: protocol_header.h  start.h  start_ok.h
include/rmq/transport/: connection.h
scripts/: build.py
scripts/utils/: pushd.py
src/: types.cpp
src/messages/: class_ids.h  frame.h  method_header.h  method_ids.h
src/transport/: connection.cpp  connection.h  field_value_types.h
src/transport/parsing/: byte_span_to_string.cpp  byte_span_to_string.h  data_field_parser.h  parse.cpp  parse.h
src/transport/serialization/: serialize.cpp  serialize.h
src/utils/: format_bytes.h  overloaded.h  print.cpp  print.h  split.h  to_short_string.h
tests/: CMakeLists.txt
tests/helpers/: require_parsed_equal.h
tests/manual/: connect.cpp
tests/unit/: connection_test.cpp  parsing_data_field_test.cpp  parsing_field_table_test.cpp  parsing_field_value_test.cpp  parsing_messages_test.cpp  parsing_test.cpp
tests/unit/parsing/: parsing_field_table_test.cpp  parsing_messages_test.cpp
tests/unit/serializing/: serializing_data_fields_test.cpp  serializing_messages_test.cpp
tests/unit/utils/: byte_range_to_short_string_test.cpp  split_long_string_test.cpp
